# google-5-day-ai-course

./: .gitignore  Day_1a_From_Prompt_to_Action.ipynb  README.md  blog.md  day-1b-agent-architectures.ipynb  day-2a-agent-tools.ipynb  day-2b-agent-tools-best-practices.ipynb  day-3a-agent-sessions.ipynb  day-3b-agent-memory.ipynb  day-4a-agent-observability.ipynb  day-4b-agent-evaluation.ipynb  day-5a-agent2agent-communication.ipynb  day-5b-agent-deployment.ipynb  pyproject.toml
