[project]
name = "ai-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a,eval]>=1.18.0",
    "google-cloud-aiplatform>=1.126.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter-server>=2.17.0",
    "python-dotenv>=1.2.1",
]
